--- a/src/main/java/GUI/Vista.form
+++ b/src/main/java/GUI/Vista.form
@@ -204,6 +204,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="CALCULAR Min"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton3ActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
